# chronos

./: .gitignore  README.md
.github/workflows/: release.yml
installers/: README.md  build-installer.bat  chronos-installer.iss
rust-client/: .gitignore  Cargo.toml  activity_log.txt
rust-client/src/: main.rs
web/: package-lock.json  package.json
web/models/: ActivityLog.js  User.js
web/src/app/: layout.jsx  page.jsx
web/src/app/api/auth/[...nextauth]/: route.js
web/src/app/api/auth/token/: route.js
web/src/app/api/logs/: route.js
web/src/app/api/sync/: route.js
web/src/app/auth/signin/: page.jsx
web/src/app/dashboard/: page.jsx
web/src/app/download/: page.jsx
web/src/app/token/: page.jsx
web/src/components/: NextAuthProvider.jsx
