[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5.0" 
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Console"
] }
